<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label_text">Name</string>
    <string name="order_label">Order</string>
    <string name="name_input_hint">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="address_enter_hint">Enter Address</string>
    <string name="phone_label_text">Phone</string>
    <string name="phone_enter_hint">Enter phone number</string>
    <string name="note_label_text">Note</string>
    <string name="note_enter_hint">Enter note</string>
    <string name="delivery_method_label">Choose a delivery model:</string>
    <string name="same_day_messenger">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
